--- a/src/components/Lander/Lander.html
+++ b/src/components/Lander/Lander.html
@@ -3,7 +3,9 @@
     <section class="section">
         <div class="animated">
             <img src="../../assets/0.jpg" alt="Modamori Oluwayomi" class="rounded-circle">
-            <h1> Software Developer</h1>
+            <h1> Modamori Oluwayomi</h1>
+            <h2> Software </h2>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid animi assumenda atque cumque cupiditate eaque eius eligendi expedita fugiat ipsum itaque, nesciunt, nulla odit placeat quae similique unde vero.
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi commodi debitis enim error eveniet minima nostrum qui sint tempora? Facere facilis in iure laboriosam maiores odio, perspiciatis sequi tempore voluptas.</p>
         </div>
     </section>
