--- a/src/components/Service/service.html
+++ b/src/components/Service/service.html
@@ -3,9 +3,6 @@
         <div class="row">
             <div class="col-lg-12 text-center service-title">
                 <h1 class="text-uppercase title-text">Services Offer</h1>
-                <p class="para">
-                    This are the services offered
-                </p>
             </div>
         </div>
     </div>
@@ -17,10 +14,7 @@
                         <img src="../../assets/services/s1.png" alt="service 1">
                     </div>
                     <div class="card-body text-center">
-                        <h5 class="card-title text-uppercase font-roboto"> WordPress Developer</h5>
-                        <p class="card-text text-secondary">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam architecto cum cumque earum explicabo incidunt laboriosam necessitatibus numquam sit?
-                        </p>
+                        <h5 class="card-title text-uppercase font-roboto"> UX/UI DESIGN</h5>
                     </div>
                 </div>
             </div>
@@ -30,10 +24,7 @@
                         <img src="../../assets/services/s2.png" alt="service 2">
                     </div>
                     <div class="card-body text-center">
-                        <h5 class="card-title text-uppercase font-roboto"> WordPress Developer</h5>
-                        <p class="card-text text-secondary">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam architecto cum cumque earum explicabo incidunt laboriosam necessitatibus numquam sit?
-                        </p>
+                        <h5 class="card-title text-uppercase font-roboto"> WEB DEVELOPER</h5>
                     </div>
                 </div>
             </div>
@@ -43,10 +34,7 @@
                         <img src="../../assets/services/s3.png" alt="service 3">
                     </div>
                     <div class="card-body text-center">
-                        <h5 class="card-title text-uppercase font-roboto"> WordPress Developer</h5>
-                        <p class="card-text text-secondary">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam architecto cum cumque earum explicabo incidunt laboriosam necessitatibus numquam sit?
-                        </p>
+                        <h5 class="card-title text-uppercase font-roboto">SEO OPTIMIZE</h5>
                     </div>
                 </div>
             </div>
@@ -56,10 +44,7 @@
                         <img src="../../assets/services/s4.png" alt="service 4">
                     </div>
                     <div class="card-body text-center">
-                        <h5 class="card-title text-uppercase font-roboto"> WordPress Developer</h5>
-                        <p class="card-text text-secondary">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam architecto cum cumque earum explicabo incidunt laboriosam necessitatibus numquam sit?
-                        </p>
+                        <h5 class="card-title text-uppercase font-roboto"> WEB DESIGN </h5>
                     </div>
                 </div>
             </div>
